force-app/main/default/objects/Mogli_SMS__Incoming_SMS__e/Mogli_SMS__Incoming_SMS__e.object-meta.xml
<CustomObject>
    <label>Incoming SMS</label>
    <pluralLabel>Incoming SMSs</pluralLabel>
</CustomObject>