force-app/main/default/objects/Mogli_SMS__Incoming_SMS__e/fields/Mogli_SMS__Attachments__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachments</label>
    <type>Checkbox</type>
</CustomField>