force-app/main/default/objects/Mogli_SMS__Incoming_SMS__e/fields/Mogli_SMS__Batch_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Batch_Group_ID__c</fullName>
    <label>Batch Group ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>