force-app/main/default/objects/Mogli_SMS__Incoming_SMS__e/fields/Mogli_SMS__Debug__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Debug__c</fullName>
    <label>Debug</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>