force-app/main/default/objects/Mogli_SMS__Incoming_SMS__e/fields/Mogli_SMS__Is_Batch_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Is_Batch_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Batch Transaction</label>
    <type>Checkbox</type>
</CustomField>