force-app/main/default/objects/Mogli_SMS__Incoming_SMS__e/fields/Mogli_SMS__Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Last_Modified_By__c</fullName>
    <label>Last Modified By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>