force-app/main/default/objects/Mogli_SMS__Incoming_SMS__e/fields/Mogli_SMS__Lead__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Lead__c</fullName>
    <label>Lead</label>
    <length>18</length>
    <type>Text</type>
</CustomField>