force-app/main/default/objects/Mogli_SMS__Incoming_SMS__e/fields/Mogli_SMS__Message_SID__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Message_SID__c</fullName>
    <label>Message SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>