force-app/main/default/objects/Mogli_SMS__Incoming_SMS__e/fields/Mogli_SMS__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Phone_Number__c</fullName>
    <label>Phone Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>