force-app/main/default/objects/Mogli_SMS__Incoming_SMS__e/fields/Mogli_SMS__Scheduled_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Scheduled_Delivery__c</fullName>
    <label>Scheduled Delivery</label>
    <type>DateTime</type>
</CustomField>