force-app/main/default/objects/Mogli_SMS__Incoming_SMS__e/fields/Mogli_SMS__SMS_Id__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__SMS_Id__c</fullName>
    <label>SMS Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>