force-app/main/default/objects/Mogli_SMS__Incoming_SMS__e/fields/Mogli_SMS__Status__c.field-meta.xml
<CustomField>
    <fullName>Mogli_SMS__Status__c</fullName>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>